--- a/.gitignore
+++ b/.gitignore
@@ -57,4 +57,20 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+
+.idea/
+.vscode/
+node_modules/
+build
+.DS_Store
+*.tgz
+my-app*
+template/src/__tests__/__snapshots__/
+lerna-debug.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/.changelog
+.npm/
+yarn.lock
 # End of https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,react
